frontend for all usecases

--- a/frontend/taskmaster/src/UpdateTaskStatus.css
+++ b/frontend/taskmaster/src/UpdateTaskStatus.css
@@ -42,7 +42,7 @@
   }
   
   /* Status update section */
-  .status-update {
+  .info-update {
     display: flex;
     flex-direction: column;
     align-items: center;
